[配置]例行更新

--- a/QuantumultX/matrix.conf
+++ b/QuantumultX/matrix.conf
@@ -1,6 +1,6 @@
 # 配置名称: QuantumultX 配置
 # 配置作者: Centralmatrix3
-# 更新时间: 24-10-25 00:00
+# 更新时间: 24-10-31 00:00
 
 [general]
 # 直连网络测试
@@ -28,7 +28,7 @@ excluded_routes = 239.255.255.250/32, 24.105.30.129/32, 185.60.112.157/32, 185.6
 dns_exclusion_list = *.cmpassport.com, *.jegotrip.com.cn, *.icitymobile.mobi, id6.me, *.pingan.com.cn, *.cmbchina.com
 
 # UDP丢弃列表
-udp_drop_list = 443
+# udp_drop_list = 443
 
 [dns]
 # 禁用系统DNS/IPv6
